[gd_scene load_steps=59 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Action RPG Resources/HitBoxes/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Action RPG Resources/HitBoxes/SwordHitBox.gd" type="Script" id=3]
[ext_resource path="res://Action RPG Resources/Player/Player.png" type="Texture" id=4]
[ext_resource path="res://Action RPG Resources/HitBoxes/HurtBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/White.shader" type="Shader" id=6]
[ext_resource path="res://Action RPG Resources/Music and Sounds/Hurt.wav" type="AudioStream" id=7]
[ext_resource path="res://Action RPG Resources/Music and Sounds/Swipe.wav" type="AudioStream" id=8]
[ext_resource path="res://Player/PlayerHealth.tscn" type="PackedScene" id=9]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 6 )
shader_param/active = false

[sub_resource type="CircleShape2D" id=2]
radius = 4.79153

[sub_resource type="Animation" id=3]
resource_name = "AttackDown"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "AttackEnd"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordRoot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SwordRoot/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("Sounds/SwordSlashSound")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "AttackLeft"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "AttackEnd"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordRoot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SwordRoot/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("Sounds/SwordSlashSound")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "AttackRight"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "AttackEnd"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordRoot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SwordRoot/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("Sounds/SwordSlashSound")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "AttackUp"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "AttackEnd"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordRoot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SwordRoot/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("Sounds/SwordSlashSound")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "IdleDown"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=8]
resource_name = "IdleLeft"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=9]
resource_name = "IdleRight"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "IdleUp"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=11]
resource_name = "RolLeft"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53, 54 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "RollEnd"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "RollDown"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 55, 56, 57, 58, 59 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "RollEnd"
} ]
}

[sub_resource type="Animation" id=13]
resource_name = "RollRight"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "RollEnd"
} ]
}

[sub_resource type="Animation" id=14]
resource_name = "RollUp"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48, 49 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "RollEnd"
} ]
}

[sub_resource type="Animation" id=15]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=16]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=17]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=18]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "AttackDown"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "AttackUp"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "AttackLeft"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "AttackRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=23]
blend_point_0/node = SubResource( 19 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 20 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 21 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 22 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1.1, -1.1 )
max_space = Vector2( 1.1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=28]
blend_point_0/node = SubResource( 24 )
blend_point_0/pos = Vector2( -1.2, 0 )
blend_point_1/node = SubResource( 25 )
blend_point_1/pos = Vector2( 1.2, 0 )
blend_point_2/node = SubResource( 26 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 27 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1.15, -1.1 )
max_space = Vector2( 1.11, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "RollDown"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "RollUp"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "RollRight"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "RolLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=33]
blend_point_0/node = SubResource( 29 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 30 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 31 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 32 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1.15, -1.14 )
max_space = Vector2( 1.1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "RunDown"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "RunUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=38]
blend_point_0/node = SubResource( 34 )
blend_point_0/pos = Vector2( -1.2, 0 )
blend_point_1/node = SubResource( 35 )
blend_point_1/pos = Vector2( 1.2, 0 )
blend_point_2/node = SubResource( 36 )
blend_point_2/pos = Vector2( 0, 1.5 )
blend_point_3/node = SubResource( 37 )
blend_point_3/pos = Vector2( 0, -1.5 )
min_space = Vector2( -2, -2 )
max_space = Vector2( 2, 2 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachine" id=45]
states/Attack/node = SubResource( 23 )
states/Attack/position = Vector2( 144, 291 )
states/Idle/node = SubResource( 28 )
states/Idle/position = Vector2( 145.25, 196.125 )
states/Roll/node = SubResource( 33 )
states/Roll/position = Vector2( 144.25, 83 )
states/Run/node = SubResource( 38 )
states/Run/position = Vector2( 306.5, 195.438 )
transitions = [ "Idle", "Run", SubResource( 39 ), "Run", "Idle", SubResource( 40 ), "Attack", "Idle", SubResource( 41 ), "Idle", "Attack", SubResource( 42 ), "Idle", "Roll", SubResource( 43 ), "Roll", "Idle", SubResource( 44 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=46]

[sub_resource type="CapsuleShape2D" id=47]
radius = 10.7322
height = 6.40714

[sub_resource type="CircleShape2D" id=48]

[sub_resource type="Animation" id=49]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "setInvulnerable"
}, {
"args": [ false ],
"method": "setInvulnerable"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Sounds/HurtSound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -8 )
texture = ExtResource( 4 )
hframes = 60
frame = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="MovementAnimations" type="AnimationPlayer" parent="."]
anims/AttackDown = SubResource( 3 )
anims/AttackLeft = SubResource( 4 )
anims/AttackRight = SubResource( 5 )
anims/AttackUp = SubResource( 6 )
anims/IdleDown = SubResource( 7 )
anims/IdleLeft = SubResource( 8 )
anims/IdleRight = SubResource( 9 )
anims/IdleUp = SubResource( 10 )
anims/RolLeft = SubResource( 11 )
anims/RollDown = SubResource( 12 )
anims/RollRight = SubResource( 13 )
anims/RollUp = SubResource( 14 )
anims/RunDown = SubResource( 15 )
anims/RunLeft = SubResource( 16 )
anims/RunRight = SubResource( 17 )
anims/RunUp = SubResource( 18 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 45 )
anim_player = NodePath("../MovementAnimations")
parameters/playback = SubResource( 46 )
parameters/Attack/blend_position = Vector2( 0.00140452, -0.000946045 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Roll/blend_position = Vector2( -0.000244498, 1.08768 )
parameters/Run/blend_position = Vector2( 0, 0 )

[node name="SwordRoot" type="Position2D" parent="."]
rotation = -1.5708
__meta__ = {
"_gizmo_extents_": 1.0
}

[node name="HitBox" parent="SwordRoot" instance=ExtResource( 2 )]
position = Vector2( 15, -5 )
collision_layer = 32
collision_mask = 8
script = ExtResource( 3 )

[node name="CollisionShape2D" parent="SwordRoot/HitBox" index="0"]
position = Vector2( -0.0441933, 1.59185 )
shape = SubResource( 47 )
disabled = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="HurtBox" parent="." instance=ExtResource( 5 )]
collision_layer = 4
collision_mask = 64

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 48 )

[node name="SpriteEffectAnimations" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 49 )

[node name="Health" parent="." instance=ExtResource( 9 )]

[node name="Sounds" type="Node2D" parent="."]

[node name="HurtSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 7 )

[node name="SwordSlashSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 8 )

[node name="Line2D" type="Line2D" parent="."]
width = 4.0
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Health" to="." method="_on_Health_no_health"]

[editable path="SwordRoot/HitBox"]

[editable path="HurtBox"]

[editable path="Health"]
